@@ -60,6 +60,7 @@ glom/libglom/xsl_utils.cc
 glom/glom_create_from_example.cc
 glom/glom_export_po.cc
 glom/glom_export_po_all.cc
+glom/glom_import_po_all.cc
 glom/glom_test_connection.cc
 glom/main.cc
 glom/mode_data/box_data_calendar_related.cc
